[package]
name = "pyrabot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dashmap = "5.5.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
poise = "0.5.6"
songbird = { version = "0.3.2", features = ["yt-dlp"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "voice",
]
